# Wpixelgram-for-HarmonyOS

./: .appkey.json.swp  .gitignore  LICENSE  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/libs/arm64-v8a/: libssl.so.4
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/include/td/generate/auto/td/telegram/: td_api_0.cpp  td_api_1.cpp  td_api_2.cpp  td_api_3.cpp  td_api_4.cpp  td_api_5.cpp  td_api_6.cpp  td_api_7.cpp  td_api_8.cpp  td_api_9.cpp  td_api_json.h  td_api_json_0.cpp  td_api_json_1.cpp  td_api_json_2.cpp  td_api_json_3.cpp  td_api_json_4.cpp  td_api_json_5.cpp  td_api_json_6.cpp  td_api_json_7.cpp  td_api_json_8.cpp  td_api_json_9.cpp  telegram_api_0.cpp  telegram_api_1.cpp  telegram_api_2.cpp  telegram_api_3.cpp  telegram_api_4.cpp  telegram_api_5.cpp  telegram_api_6.cpp  telegram_api_7.cpp  telegram_api_8.cpp  telegram_api_9.cpp
entry/src/main/cpp/include/td/telegram/: tdjson_export.h
entry/src/main/cpp/types/libtdlib_bridge/: index.d.ts  oh-package.json5
entry/src/main/ets/common/constants/: AppLayout.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: CacheManagementPage.ets  ChatListPage.ets  ChatPage.ets  ChatProfilePage.ets  ContactsPage.ets  DataStoragePage.ets  GlobalSearchPage.ets  Index.ets  LoginPage.ets  MainPage.ets  ProfilePage.ets  VideoPlayerPage.ets
entry/src/main/resources/rawfile/: telegram_config.example.json
(+12 files in other folders)
